--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,25 @@ footer span {
     height: 100%;
     outline: none;
 }
+
 h2 {
     padding-bottom: 0.5em;
+    font-size: clamp(1.4dvw, 1rem, 1rem);
+}
+
+h2 img {
+    height: 1em;
+    float: right;
 }
 
 .hi {
-    box-shadow: inset 0 0.25em 0.5em #F7F;
+    box-shadow: inset 0 0 1em #F0F7;
+}
+
+.lo {
+    opacity: 0.5
+}
+
+.grid-item:has(*:focus) {
+    box-shadow: inset 0 0 1em #F0F7;
 }
