tweak 1) dialog was visible before first opening on scroll. tweak 2) dialog was removed, not just closed.

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ h2 img {
     box-shadow: inset 0 0 1em #F0F7;
 }
 
-dialog {
+dialog:modal {
     margin: auto;
     padding: 2em;
     display: flex;
